# NoLibC

./: CMakeLists.txt  main.c  nolibc.h  test.c
nolibc/: _syscall.h  _write_buffer.h  arena.c  entry.c  file.c  filewritebuffer.c  format.c  intrinsic.c  iwriter.c  memory.c  nolibc.c  nolibc.h  print.c  priv_nolibc.h  priv_syscall.c  priv_syscall.h  string.c  stringbuffer.c  syscall.c  system.c  types.h  write_buffer.c
nolibc/headers/: nlc.h  nlc_types.h
nolibc/private/: entry.h  filewritebuffer.h  intrinsic.h  syscall.h  system.h  write_buffer.h
nolibc/public/: nlc.h  nlc_arena.h  nlc_file.h  nlc_filewritebuffer.h  nlc_format.h  nlc_iwriter.h  nlc_maths.h  nlc_memory.h  nlc_print.h  nlc_string.h  nlc_stringbuffer.h  nlc_system.h  nlc_terminal.h  nlc_types.h  nlc_varg.h
test/: main.c
